# wear-your-scales

./: .gitignore  LICENSE  README.md  ResidualNetwork.R  post_hoc_analysis.py  preprocess.sh  preprocess_ds.py  pyproject.toml  requirements.txt  setup.sh  sweep.py  train.py  train_baseline.py
data/: README.md
scripts/: circle_plot.ipynb
src/timebase/: __init__.py  criterions.py  metrics.py
src/timebase/data/: filter_data.py  preprocessing.py  reader.py  resample.py  spreadsheet.py  static.py  utils.py
src/timebase/models/: critic.py  embedding.py  item_predictor.py  models.py
src/timebase/models/feature_encoder/: __init__.py  bilstm.py  encoder.py  linear.py  transformer.py
src/timebase/utils/: h5.py  plots.py  scheduler.py  tensorboard.py  utils.py  yaml.py
